assets/css/app.css
/* ... */
.accordion {
	--bs-accordion-active-color: var(--bs-text);
	--bs-accordion-active-bg: var(--evcc-background);
	--bs-accordion-btn-active-icon: var(--bs-accordion-btn-icon);
}

.text-evcc {
	color: var(--evcc-dark-green);
}
.text-accent1 {
	color: var(--evcc-accent1);
}
.text-accent2 {
	color: var(--evcc-accent2);
}
.text-accent3 {
	color: var(--evcc-accent3);
}

.evcc-default-text {
	color: var(--evcc-default-text) !important;
}
.evcc-gray {
	color: var(--evcc-gray);
}
.text-grid {
	color: var(--evcc-grid);
}
.text-dark {
	color: var(--bs-gray-dark);
}
.text-light {
	color: var(--bs-gray-bright);
}
.text-gray {
	color: var(--bs-gray-medium);
}
.text-gray-medium {
	color: var(--bs-gray-medium);
}
.text-gray-light {
	color: var(--bs-gray-light);
}
.bg-dark {
	background-color: var(--bs-gray-dark) !important;
}

@media screen and (--xs-to-sm) {
	.d-xs-none {
		display: none !important;
	}
	.d-xs-inline {
		display: inline !important;
	}
}

/* breakpoint lg */
@media (--lg-and-up) {
	.modal-lg,
	.modal-xl {
		--bs-modal-width: 850px;
	}
	.w-lg-auto {
		width: auto !important;
	}
}

.modal-backdrop.show {
	opacity: 1;
}

.modal-backdrop {
	--bs-backdrop-bg: var(--evcc-backdrop);
	backdrop-filter: var(--evcc-backdrop-blur);
}

.modal-backdrop.fade {
	transition-property: opacity, backdrop-filter, background-color;
	transition-duration: var(--evcc-transition-fast);
	transition-timing-function: linear;
}

.modal.fade-left .modal-dialog {
	transform: translate(-50px, 0);
}
.modal.fade-right .modal-dialog {
	transform: translate(50px, 0);
}
.modal.show .modal-dialog {
	transform: none;
}

.modal-header {
	padding: 0 0 1rem 0;
	border: none;
}

.modal-title {
	font-weight: bold;
	font-size: 1.25rem;
}

.modal-content {
	border-radius: 1rem;
	padding: 1.25rem;
	background-color: var(--evcc-box);
	color: var(--evcc-default-text);
}

.modal-content h6 {
	margin-top: 2rem;
	margin-bottom: 1.5rem;
	font-size: 1rem;
	font-weight: bold;
}

/* breakpoint sm */
@media (--sm-and-up) {
	.modal-content {
		padding: 2rem;
	}
}

.modal-body {
	padding: 1rem 0 0;
}

.modal-footer {
	padding: 1rem 0 0;
	border: none;
}

.modal-footer > * {
	margin: 0;
}

html:has(.modal.show) {
	overflow-y: hidden;
}

.cursor-pointer {
	cursor: pointer;
}

.v-popper__inner {
	margin: 0 12px !important;
}

.small,
small {
	font-size: var(--bs-body-font-size);
	color: var(--bs-gray-medium) !important;
}

.btn-close {
	opacity: 1;
}

.dark .btn-close {
	filter: invert(1);
}

.circle-badge {
	display: inline-block;
	width: 12px;
	height: 12px;
	border-radius: 50%;
}

.dropdown-menu {
	border: none;
	border-radius: 10px;
	box-shadow: 0 0 8px var(--bs-gray-light);
	background-color: var(--evcc-box);
}
.dropdown-item {
	color: var(--evcc-default-text);
}
.dropdown-item:active,
.dropdown-item.active {
	background-color: var(--evcc-gray-25);
	color: var(--evcc-default-text);
}
.form-select {
	overflow: hidden;
	text-overflow: ellipsis;
}
.form-select.disabled,
.form-select:disabled {
	background-color: var(--bs-secondary-bg);
}

.dark .dropdown-menu {
	box-shadow: 0 0 8px var(--evcc-background);
}
.dark .form-select {
	background-color: var(--evcc-box);
	color: var(--evcc-default-text);
	background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'><path fill='none' stroke='%23ffffff' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='m2 5 6 6 6-6'/></svg>");
}

.dark .text-muted {
	color: var(--bs-gray-medium) !important;
}

.dark .form-select.disabled,
.dark .form-select:disabled {
	opacity: 0.5;
}

.dark .table {
	--bs-table-color: var(--evcc-default-text);
	--bs-table-border-color: var(--evcc-gray);
}

.nav-tabs .nav-link {
	color: var(--evcc-gray) !important;
}

.nav-tabs .nav-link.active {
	color: var(--evcc-default-text) !important;
	background-color: var(--evcc-box) !important;
	border-bottom-color: var(--evcc-box);
}

.form-check-input:checked {
	border-color: var(--bs-primary);
	background-color: var(--bs-primary);
}

.dark .form-switch .form-check-input:checked {
	background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%2328293e'/%3e%3c/svg%3e");
}
/* fix desktop safari formatting */
input::-webkit-datetime-edit {
	display: block;
	padding: 0;
}

.tooltip {
	--bs-tooltip-opacity: 1;
	--bs-tooltip-bg: var(--bs-gray-deep);
	--bs-tooltip-color: var(--bs-white);
}

.dark .tooltip {
	--bs-tooltip-bg: var(--bs-white);
	--bs-tooltip-color: var(--bs-gray-deep);
}

.card {
	--bs-card-bg: var(--evcc-background);
}

.form-control {
	color: var(--evcc-default-text);
}
input.form-control:disabled,
input.form-control:read-only,
textarea.form-control:disabled,
textarea.form-control:read-only,
.dark input.form-control:disabled,
.dark input.form-control:read-only,
.dark textarea.form-control:disabled,
.dark textarea.form-control:read-only {
	background-color: var(--evcc-gray-10);
	color: var(--bs-default-text);
	opacity: 1;
}

.dark .form-control {
	background-color: var(--evcc-box);
	color: var(--evcc-default-text);
}

.form-control::placeholder {
	opacity: 0.5 !important;
}

input[type="time"]::-webkit-calendar-picker-indicator {
	display: none;
}

/* Safari: hide the datalist dropdown button */
input[list]::-webkit-list-button {
	display: none !important;
	appearance: none !important;
	opacity: 0 !important;
	width: 0 !important;
	pointer-events: none !important;
}
/* ... */

